# polymarket-trading-bot

./: .env.example  .gitignore  EXPERIMENTS.md  README.md  check_orders.py  pyproject.toml  run_backtest.py  run_paper.py
backtest/: __init__.py  engine.py  loader.py  report.py  simulator.py
data_extract/: btc5m_collector.py  current_btc_price_test.py  poly_data_test.py
src/: __init__.py  bot.py  client.py  config.py  gamma_client.py  signer.py  utils.py  websocket_client.py
strategies/: __init__.py  base.py  brownian_edge_exit.py  brownian_motion.py  example_threshold.py  strategy_guide.md
testing/: README.md  basic_trading.ipynb  quickstart.ipynb
testing/check_experiments/: check_ticks.ipynb  check_trades.ipynb
trader/: __init__.py  engine.py  market_feed.py
